# AirbnbLatamAnalysis

./: README.md  pyproject.toml
notebooks/: airbnb_analysis.ipynb
